css/style.css
body {
        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
        padding-top: 4rem;
        scroll-behavior: smooth;
}

.uep-cover {
        height: 16rem;
        width: 100%;
        object-fit: cover;
        object-position: 100% 50%;
        filter: brightness(0.5);
}

.card-text {
        text-align: justify;
}

.slider-wrapper {
        overflow: hidden;
        width: 100%;
}

.slider {
    display: flex;
    width: 600%; /* number of sections */
    transition: transform 0.5s ease;
}

section {
    width: 100vw;
    height: 100vh;
    flex-shrink: 0;
}

nav {
    position: fixed;
    width: 100%;
    z-index: 9999;
}

